# Seshat_BI

./: .env.example  .gitattributes  .gitignore  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  COMPASS.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  dependency-environments.yaml  profiles.example.yml  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/agents/: powerbi-analyst.md
.claude/workflows/: idea-engine.js  idea-to-spec.js  implement.js  speckit-batch-with-drift-lens.js  speckit-batch.js  speckit-finish-chain.js
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  compatibility.yml  config.yml  feature.yml  pack.yml  starter.yml
.github/workflows/: ci.yml  dagster-smoke.yml  dep-integrity.yml  prepare-coordinated-release.yml  release.yml
.seshat/: compass.yaml  kit-source.yaml  manifest.yaml
.seshat/integrations/: claude.json  codex.json
.specify/: feature.json
.specify/memory/: constitution.md
.superpowers/sdd/: gov-task-M1.7-report.md  gov-task-M2-report.md  gov-task-M3-report.md  gov-task-M4a-report.md  task-10-report.md  task-5-report.md
benchmark/scenarios/: hard-stops.yaml  retail-semantics.yaml
checklists/: large-source-review-checklist.md
contracts/interview/: report-intent-interview.yaml
contracts/knowledge/: approval-authority.yaml  database-to-pbip-flow.yaml
contracts/report/: report-intent.yaml
dbt/: dbt_project.yml  selectors.yml
dbt/macros/: generate_schema_name.sql
design/backgrounds/: README.md
design/claude-design-system/: README.md  colors_and_type.css  validate_cards.py
design/grids/: 16x9-grid.yaml  mobile-grid.yaml
design/tokens/: executive-dark-design-tokens.yaml  tower-retail-design-tokens.yaml
distribution/: README.md  public-command-surface.yaml  public-knowledge-allowlist.yaml
distribution/synthetic-retail/: expected-outcomes.yaml  source.csv
docs/: agent-mode.md  c086-adr0002-compliance.md  conventions.md  data-dictionary.md  faq.md  glossary.md  knowledge-map.md  medallion-playbook.md  powerbi-connection.md  source-intelligence.md
docs/architecture/: core-vs-modules-and-adapters.md  product-modules.md  readiness-pipeline.md  tower-bi-agent-kit.md
docs/big-data/: big-data-capability-report.md  data-volume-assessment.md
docs/brand/: visual-identity.md
docs/capabilities/: README.md  capabilities.yaml
docs/checklists/: readiness-decay.md  source-drift.md
docs/contributing/: contribution-lanes.yaml  first-contribution.md
docs/decisions/: 0001-tmdl-pbir-parser.md  0002-retail-cleaning-defaults.md  0003-mapping-artifact-location.md  0004-readiness-status-location.md  0005-live-surface-hardening.md  0006-codex-review-hardening.md  0007-dax-governance-layers.md  0008-core-authority-vs-product-modules.md  0009-dbt-is-transformation-adapter.md  0010-dagster-is-orchestration-adapter.md  0011-safe-auto-updates.md  0012-p2-commit-types.md  0013-bi-tool-adapter-shortlist.md  0014-pure-kit-repo-split.md  0015-pbir-authoring-adapter-lifts-fr008-fr009.md  0016-pbir-adapter-geometry-increment-d.md  0017-pbir-creation-primitive.md
mappings/: README.md
orchestration/dagster/: .gitignore  README.md  pyproject.toml
orchestration/dagster/run-evidence/: 20260719T205907Z-b358814b.md  20260719T210317Z-17683713.md  20260719T210830Z-e9646d20.md  README.md
orchestration/dagster/src/tower_bi_orchestration/: __init__.py  commands.py  db.py  dbt_build.py  definitions.py  engine.py  evidence_writer.py  jobs.py  repo.py  schedules.py  sensors.py
orchestration/dagster/src/tower_bi_orchestration/assets/: __init__.py  bronze_guard.py  downstream.py  gates.py  ingest.py  sources.py
orchestration/dagster/tests/: conftest.py  test_bronze_write_guard.py  test_command_boundary.py  test_csv_mode_unchanged.py  test_dbt_engine_build.py  test_dbt_engine_deferred.py  test_dbt_engine_evidence_distinct.py  test_definitions_load.py  test_engine_resolution.py  test_engine_seam_invariants.py  test_evidence_records.py  test_existing_bronze_mode.py  test_fail_closed.py  test_human_seam.py  test_migrations_unchanged.py  test_semantic_gate.py
pipelines/: load_bronze_csv.py
powerbi/: README.md  RetailStoreSales.pbip  Retailgold.pbip  c086 _sales.pbip  c086_sales.pbip
schemas/: agent-status.schema.json  benchmark-run.schema.json  dagster-run-evidence.schema.json  pbip-adoption-scaffold-result.schema.json  readiness-passport.schema.json  seshat-pack-registry.schema.json  source-drift-findings.schema.json  static-readiness-projection.schema.json
scripts/: bundle_provenance.py  check_release_versions.py  dep_coresolve.py  export_agent_bundles.py  export_dbt_fixture.py  export_github_action.py  external_agent_acceptance.py  inspect_release_artifacts.py  install_smoke_test.py  post_friendly_pr_summary.py  release_candidate_audit.py  release_note_gate.py
specs/: COLLISION-RECONCILE.md  README.md
templates/: a11y-rtl-readiness-checklist.md  adapter-contract.md  adapter-version-record.md  approval-decision.md  approval-evidence-pack.md  approval-request.md  assumptions.md  background-spec.yaml  blocking-reasons.md  business-meaning-registry.md  consumer-data-dictionary.md  customer-dimension.md  dagster-run-evidence.md  dashboard-layout.md  dashboard-page-blueprint.yaml  data-issues.md  data-quality-control-room.md  data-volume-profile.md  dbt-adapter-contract.md  dbt-model-contract.md  design-review-evidence.md  driver-decomposition.md  evidence-pack-index.md  evidence-pack-summary.md  factless-fact.yaml  first-hour-compass.md  formatting-plan.md  friendly-pr-summary.md  kit-source.yaml  kpi-pack.yaml  large-source-profile.md  lineage-trace.md  maturity-report.md  metric-contract-shape.variance-vs-target.yaml  metric-contract.yaml  module-contract.md  pbir-adapter-contract.md  portfolio-survey.md  pr-readiness-report.md  readiness-scorecard.md  (+18 more)
themes/: README.md  executive-dark.theme-spec.md  executive-dark.theme.json  tower-retail.theme.json
tools/: bpa_runner.py
warehouse/: README.md
(+2563 files in other folders)
