[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seshat-bi"
version = "0.5.2"
license = "Apache-2.0"
license-files = ["LICENSE"]
description = "Seshat BI: agent-first Retail BI readiness checker (static retail check + live retail validate over the medallion warehouse and Power BI conventions)."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Ahmed Shaaban" }]
maintainers = [{ name = "Ahmed Shaaban" }]
requires-python = ">=3.13"
keywords = [
    "business-intelligence",
    "data-governance",
    "power-bi",
    "readiness",
    "retail-analytics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Quality Assurance",
]
# pyyaml is a RUNTIME dependency: ~10 governance rules (RS1, A1/routes, the
# assumption-coherence pair, parked_on, design_background, ...) do a lazy
# `import yaml` while `retail check` runs, so a bare `pip install .` install must
# ship it or the gate crashes with ModuleNotFoundError the moment one fires. The
# lazy imports keep it off the MODULE-scope import chain (B1/B3), not out of the
# runtime -- so it belongs here, not in the dev extra (audit R6).
dependencies = [
    "pyyaml>=6",
]

[project.urls]
Homepage = "https://github.com/Kemetra/Seshat-BI"
Repository = "https://github.com/Kemetra/Seshat-BI"
Documentation = "https://github.com/Kemetra/Seshat-BI/tree/main/docs"
Issues = "https://github.com/Kemetra/Seshat-BI/issues"
Changelog = "https://github.com/Kemetra/Seshat-BI/blob/main/CHANGELOG.md"

[project.scripts]
# `seshat` is the primary command; `retail` is a deprecated compatibility alias
# kept for one deprecation cycle (roadmap M1). Both console scripts dispatch the
# same entry point. Exposing either command requires a `pip install -e .`
# reinstall; the test suite calls the module directly, so it is unaffected.
seshat = "seshat.cli:main"
retail = "seshat.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]
# `db` extra: the optional DB driver for `retail validate`'s LIVE run. NOT in
# `dev` -- so CI installs no driver, which keeps the static core stdlib-only AND
# proves (by the suite passing) that the validate logic is driver-free.
db = [
    "psycopg2-binary>=2.9",
]
# `dbt` extra: the governed transformation adapter. Core + Postgres are pinned
# together because Seshat validates their artifact schema and selector behavior
# as one compatibility boundary. Imports remain lazy; base installs load no dbt.
dbt = [
    "dbt-core==1.12.0",
    "dbt-postgres==1.10.2",
]
# Additional per-engine extras for `retail validate`'s multi-engine LIVE run
# (Task 11 / R4). NOT in `dev` -- same reasoning as `db`: CI installs none of
# these, so the static core and the validate/dialect logic stay driver-free
# and the suite passing proves every connect() import is lazy.
mssql = [
    "pyodbc>=5.0",
]
mysql = [
    "mysql-connector-python>=9.0",
]
snowflake = [
    "snowflake-connector-python>=3.0",
]
# `files` extra: the optional reader for profiling an EXCEL file source
# (`retail.file_profile.make_excel_reader`). NOT in `dev` -- CI installs no reader,
# so the suite passing proves file_profile's import path stays library-free and
# CSV profiling works on the stdlib alone (openpyxl is imported lazily, only when an
# Excel file is actually profiled). CSV needs no extra.
files = [
    "openpyxl>=3.1",
]
# `livetest` extra (spec 082): the optional Docker-orchestration library for the
# LOCAL live-validation suite (tests/live_db/). It stands up an ephemeral Postgres
# container so `retail validate` / `value-check`'s already-built live checks run
# against real materialized rows. NOT in `dev` -- so CI installs no Docker
# orchestration and the `live_db`-marked tests are deselected (`pytest -m unit`);
# the suite passing without this extra proves the live-DB tests self-skip honestly
# (never a hidden pass) when the harness is absent. Also disjoint from `db` (that
# extra stays driver-only). testcontainers is imported LAZILY (inside the fixture),
# and each live_db test module `pytest.importorskip`s it, so collection never errors
# when the extra is not installed.
livetest = [
    "testcontainers[postgres]>=4.0",
]
# `mcp` extra: optional local stdio adapter for the read-only Seshat governor.
# Keep the stable v1 line pinned below v2 so a normal install and the static
# governance core never acquire the protocol SDK or a pre-release major.
mcp = [
    "mcp>=1.28,<2",
]
# Browser verification for generated offline HTML. Kept out of `dev` so the
# normal unit-test environment does not download or provision browser tooling.
browser = [
    "playwright>=1.50",
]

[tool.hatch.build.targets.wheel]
packages = ["src/seshat", "src/retail"]

[tool.hatch.build.targets.wheel.force-include]
"mappings/demo_sample_orders" = "seshat/demo/resources/demo_sample_orders"
"tests/fixtures/demo/demo_sample_orders.csv" = "seshat/demo/resources/demo_sample_orders.csv"
"assets/brand/seshat-seven-star.svg" = "seshat/demo/resources/seshat-seven-star.svg"
# The `pack` command family reads these JSON schemas at runtime. Their canonical
# home is the repo-root `schemas/` dir (not under `src/`), so a bare wheel would
# not ship them and `pack validate`/`search`/`inspect`/`add` crashed with
# FileNotFoundError on any non-editable install. Force-include a copy under the
# package so `packs.resolve_schema_path` finds them in an installed layout.
"schemas/seshat-extension-pack.schema.json" = "seshat/packs/schemas/seshat-extension-pack.schema.json"
"schemas/seshat-pack-registry.schema.json" = "seshat/packs/schemas/seshat-pack-registry.schema.json"
# `seshat dbt init` / `seshat dagster init` (issue #325) materialize the
# GENERIC governed projects from these bundled templates so any workspace is
# self-sufficient without the development repository. Only table-neutral
# files ship (constitution VII): the dbt models/** and selectors.yml stay
# dev-only (worked example); selectors.yml is generated table-neutral by init.
"dbt/dbt_project.yml" = "seshat/governed_projects/dbt/dbt_project.yml"
"dbt/macros" = "seshat/governed_projects/dbt/macros"
"profiles.example.yml" = "seshat/governed_projects/profiles.example.yml"
"schemas/dbt-run-evidence.schema.json" = "seshat/governed_projects/schemas/dbt-run-evidence.schema.json"
"schemas/dagster-run-evidence.schema.json" = "seshat/governed_projects/schemas/dagster-run-evidence.schema.json"
"orchestration/dagster/pyproject.toml" = "seshat/governed_projects/orchestration/dagster/pyproject.toml"
"orchestration/dagster/.gitignore" = "seshat/governed_projects/orchestration/dagster/.gitignore"
"orchestration/dagster/README.md" = "seshat/governed_projects/orchestration/dagster/README.md"
"orchestration/dagster/run-evidence/README.md" = "seshat/governed_projects/orchestration/dagster/run-evidence/README.md"
"orchestration/dagster/src" = "seshat/governed_projects/orchestration/dagster/src"
# `seshat scaffold-source <table>` (issue #339) materializes the three Stage-1
# blank templates from these bundled copies so a pip-only workspace can produce
# the first Source-Ready artifact without the development repository. Only the
# table-neutral blank templates ship (constitution VII).
"templates/source-profile.md" = "seshat/stage1_templates/source-profile.md"
"templates/readiness-status.yaml" = "seshat/stage1_templates/readiness-status.yaml"
"templates/source-map.yaml" = "seshat/stage1_templates/source-map.yaml"
# The other two of the five sister artifacts source-map.yaml declares a reviewer
# reads as a set (issue #380); scaffold-source now materializes all five.
"templates/assumptions.md" = "seshat/stage1_templates/assumptions.md"
"templates/reconciliation-report.md" = "seshat/stage1_templates/reconciliation-report.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/mappings/demo_sample_orders",
    "/tests/fixtures/demo/demo_sample_orders.csv",
    "/assets/brand/seshat-seven-star.svg",
    # Runtime schemas the `pack` family reads (see the wheel force-include note).
    # The sdist must carry them so the wheel (built from the sdist) can
    # force-include them into the package.
    "/schemas/seshat-extension-pack.schema.json",
    "/schemas/seshat-pack-registry.schema.json",
    # Governed-project templates the init scaffolders bundle (issue #325);
    # the wheel is built from the sdist, so the sdist must carry them.
    "/dbt/dbt_project.yml",
    "/dbt/macros",
    "/profiles.example.yml",
    "/schemas/dbt-run-evidence.schema.json",
    "/schemas/dagster-run-evidence.schema.json",
    "/orchestration/dagster/pyproject.toml",
    "/orchestration/dagster/.gitignore",
    "/orchestration/dagster/README.md",
    "/orchestration/dagster/run-evidence/README.md",
    "/orchestration/dagster/src",
    # Stage-1 blank templates the scaffold-source verb bundles (issue #339, #380);
    # the wheel is built from the sdist, so the sdist must carry them.
    "/templates/source-profile.md",
    "/templates/readiness-status.yaml",
    "/templates/source-map.yaml",
    "/templates/assumptions.md",
    "/templates/reconciliation-report.md",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
# Verbatim CSS content ported from the design handoff; individual rule
# declarations can exceed line-length but must not be reflowed (task 2 brief).
"src/seshat/dashboard/theme.py" = ["E501"]

[tool.pytest.ini_options]
markers = [
    "unit",
    "integration",
    "live_db",
    "seed: name the seed scenario .sql file for a live_db test (spec 082)",
]
testpaths = ["tests"]
# "src" lets tests import the `retail` package; "." puts the repo root on
# sys.path so the shared helper import `from tests.unit._gitfix import ...`
# resolves under a bare `pytest` invocation (CI) as well as `python -m pytest`
# (which adds cwd implicitly). Without "." CI fails collection with
# ModuleNotFoundError: No module named 'tests'.
pythonpath = ["src", "."]
addopts = "--cov=src --cov-report=term-missing"
