[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tower-bi-orchestration"
version = "0.1.0"
description = "Seshat BI Dagster orchestration adapter (F030): runs already-approved medallion steps behind every gate; decides no readiness stage."
requires-python = ">=3.13"
# dagster is pinned EXACTLY (spec 024 auto-update posture): updates land via PR
# only; a MAJOR bump needs a named reviewer (no automerge). psycopg2 is the DB
# boundary for bronze loads / migrations / read-only validation. pyyaml reads
# committed readiness/gate artifacts.
#
# The `dagster-dbt` pin was DROPPED by spec 135 (FR-011 owner decision, Ahmed
# Shaaban 2026-07-17, resolving plan-review R3): no released dagster-dbt accepts
# dbt-core 1.12 (ResolutionImpossible against the spec-133 dbt pin), and the dbt
# engine's execution path never imports dagster-dbt -- it routes through the
# governed `seshat.dbt` control layer. The unused library is removed rather than
# downgrading the spec-133 dbt pins.
#
# NOTE: this project also requires the repo-root `seshat-bi` package WITH its
# `[dbt]` extra (the read-only gate readers live in seshat.dagster_adapter.gate
# and the governed dbt control layer lives in seshat.dbt -- one tested
# implementation, imported by both sides). A relative-path dependency is not
# portable in pyproject metadata, so the install step supplies it explicitly:
#   uv venv .venv
#   uv pip install -p .venv -e "../..[dbt]" -e ".[dev]"
dependencies = [
    "dagster==1.13.14",
    "psycopg2-binary>=2.9",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tower_bi_orchestration"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
